# agent-eval

./: .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml  scorecard.yml
benchmarks/: README.md  test_gaia.py  test_stat_overhead.py  test_swebench.py  test_tau_bench.py
benchmarks/results/: baseline.json
dev/bench/: data.js
docs/: arxiv-preprint-draft.md  benchmarks.md  concepts.md  cross-version-comparison.md  getting-started.md  good-first-issues.md  lessons.md  pr-analysis.md  statistical-methods.md  validation.md
docs/blog/: statistical-regression-tester-29-real-merged-prs.md
docs/integrations/: crewai.md  langchain.md  langgraph.md  openai-agents.md
examples/01-basic-comparison/: example.py
examples/02-ci-regression-gate/: test_regression.py
examples/03-tau-bench-harness/: example.py
examples/04-model-upgrade-audit/: example.py
examples/05-langgraph-context-api-migration/: example.py
leaderboard/: README.md  schema.json
leaderboard/results/: mock-baseline-agent-2026-06-19.json
npm/: README.md  package.json
src/agent_regress/: __init__.py  cli.py
src/agent_regress/benchmarks/: __init__.py  gaia.py  swebench.py  tau_bench.py
src/agent_regress/ci/: __init__.py  gate.py
src/agent_regress/core/: __init__.py  compare.py  report.py  runner.py  scorer.py  state_diff.py
src/agent_regress/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py  openai_agents.py
src/agent_regress/stats/: __init__.py  bootstrap.py  effect_size.py  mann_whitney.py
tests/: conftest.py
tests/integration/: test_crewai.py  test_langgraph.py  test_openai_agents.py
tests/unit/: test_cli.py  test_serve.py
tests/unit/benchmarks/: test_harnesses.py
tests/unit/ci/: test_gate.py
tests/unit/core/: test_compare.py  test_report.py  test_runner.py  test_scorer.py  test_state_diff.py
tests/unit/integrations/: test_crewai_unit.py  test_langgraph_unit.py
tests/unit/stats/: test_bootstrap.py  test_effect_size.py  test_mann_whitney.py  test_stat_timing.py
web/: serve.py
